# ScoreRAG

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: news_router.py
backend/app/db/: chroma_connector.py  mongo_connector.py
backend/app/llm_clients/: groq_client.py  openai_client.py
backend/app/schemas/: news.py
backend/app/services/: CoT_service.py  embedding_service.py  generation_service.py  summary_service.py
backend/example_data/: news_202405.json
backend/scripts/: ingest_sample.py  test_score_pipeline.py
backend/tests/: test_news_router.py
frontend/: package-lock.json
frontend/public/: sample_output.json
frontend/src/: App.css  App.jsx
frontend/src/components/: NewsGenerator.jsx
