[project]
name = "score-rag"
version = "0.1.0"
description = "Score-based Retrieval-Augmented Generation pipeline"
requires-python = ">=3.9"

dependencies = [
    "langchain>=0.2.11",
    "langchain-huggingface>=0.0.5",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.27",
    "chromadb==0.4.22",
    "numpy<2.0",
    "pymongo==4.12.1",
    "pandas==2.2.3",
    "requests==2.32.3",
    "python-dotenv",
    "fastapi",
    "uvicorn"
]